--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,83 +15,97 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SmileJobPortal"
         tools:targetApi="31">
+        <activity
+            android:name=".Activity.SettingsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AdminPanel.AllUsersActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AdminPanel.AdminUpdateJobActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AdminPanel.AdminManageJobsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.LatestJobsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.ResultsOfSerach"
+            android:exported="false" />
 
         <service
             android:name=".Service.FirebaseMessagingServiceNotification"
             android:exported="false">
             <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
 
         <activity
+            android:name=".Activity.SearchResultsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.SearchActivity"
+            android:exported="false" />
+        <activity
             android:name=".AdminPanel.CandidateListActivity"
             android:exported="false" />
-
         <activity
             android:name=".Activity.Navbar.ExploreActivity"
             android:exported="false" />
-
         <activity
             android:name=".Activity.Navbar.BookmarkActivity"
             android:exported="false" />
-
         <activity
             android:name=".Activity.Navbar.ProfileActivity"
             android:exported="false" />
-
         <activity
             android:name=".Activity.Navbar.ChatActivity"
             android:exported="false" />
-
         <activity
             android:name=".Activity.RegistrationActivity"
             android:exported="false" />
-
         <activity
             android:name=".Activity.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".AdminPanel.AdminAddJobDataActivity"
             android:exported="false" />
-
         <activity
             android:name=".Activity.SuccessActivity"
             android:exported="false" />
-
         <activity
             android:name=".Activity.SubmitDataToDatabase"
             android:exported="false" />
-
         <activity
-            android:name=".DetailsActivity"
+            android:name=".Activity.DetailsActivity"
             android:exported="false"
+            android:windowSoftInputMode="adjustResize"
             tools:ignore="AppLinkUrlError">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
+
                 <data
-                    android:scheme="myapp"
-                    android:host="jobdetails" />
+                    android:host="jobdetails"
+                    android:scheme="myapp" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".Activity.IntroActivity"
             android:exported="false" />
-
         <activity
             android:name=".Activity.MainActivity"
-            android:windowSoftInputMode="adjustResize"
             android:exported="false" />
-
     </application>
 
 </manifest>
