--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,29 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
-
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/logo_smile_job"
+        android:icon="@drawable/samarth"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SmileJobPortal"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+
+        <service
+            android:name=".javaClass.MyFirebaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
+        <activity
+            android:name=".Activity.ContactDetailsActivity"
+            android:exported="false" />
         <activity
             android:name=".AdminPanel.AdminContactedByHrCallActivity"
             android:exported="false" />
         <activity
             android:name=".Activity.SplashActivity"
             android:exported="false"
-            android:theme="@style/Theme.SmileJobPortal" >
+            android:theme="@style/Theme.SmileJobPortal">
 
             <!-- <intent-filter> -->
             <!-- <action android:name="android.intent.action.MAIN" /> -->
@@ -64,23 +76,6 @@
             android:name=".Activity.LatestJobsActivity"
             android:exported="false" />
 
-        <service
-            android:name=".Service.FirebaseMessagingServiceNotification"
-            android:exported="false" >
-            <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT" />
-            </intent-filter>
-        </service>
-
-        <service
-            android:name=".javaClass.MyFirebaseMessagingService"
-            android:exported="false">
-            <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT" />
-            </intent-filter>
-        </service>
-
-
         <activity
             android:name=".Activity.SearchResultsActivity"
             android:exported="false" />
@@ -107,11 +102,15 @@
             android:exported="false" />
         <activity
             android:name=".Activity.LoginActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+
+                    <action android:name="OPEN_MAIN_ACTIVITY" />
+                    <category android:name="android.intent.category.DEFAULT" />
+
             </intent-filter>
         </activity>
         <activity
@@ -127,7 +126,7 @@
             android:name=".Activity.DetailsActivity"
             android:exported="false"
             android:windowSoftInputMode="adjustResize"
-            tools:ignore="AppLinkUrlError" >
+            tools:ignore="AppLinkUrlError">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -142,9 +141,11 @@
         <activity
             android:name=".Activity.IntroActivity"
             android:exported="false" />
-        <activity
-            android:name=".Activity.MainActivity"
-            android:exported="false" />
+        <activity android:name=".Activity.MainActivity"
+            android:exported="false">
+
+        </activity>
+
     </application>
 
 </manifest>
